[Fin]books#show

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,31 @@
 <h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render "users/info", user: current_user %>
+      <%= render "books/form", book: @new_book %>
+    </div>
+    
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table class="table">
+        <tbody>
+          <tr>
+            <td>
+              <%= link_to user_path(@user) do %>
+                <%= image_tag @user.get_profile_image("100x100") %></br>
+                <%= @user.name %>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to @book.title, book_path(@book) %>
+            </td>
+            <td><%= @book.body %></td>
+          </tr>
+        </tbody>
+      </table>
+      
+    </div>
+  </div>
+</div>
