--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+Users#index
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render "users/info", user: current_user %>
+      <%= render "books/form", book: @book %>
+    </div>
+    
+    <div class="col-md-8 offset-md-1">
+      
+      
+      
+    </div>
+  </div>
+</div>
