--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,42 @@
 <h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render "users/info", user: @user %>
+      <%= render "books/form", book: @book %>
+    </div>
+    
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      
+      <table class="table">
+        <thead>
+          <tr>
+            <td></td>
+            <td>Title</td>
+            <td>Opinion</td>
+          </tr>
+        </thead>
+        <tbody>
+          <% @user.books.each do |book| %>
+            <tr>
+              <td>
+                <%= link_to user_path(book.user) do %>
+                  <%= image_tag book.user.get_profile_image("50x50") %>
+                <% end %>
+              </td>
+              <td>
+                <%= link_to book.title, book_path(book) %>
+              </td>
+              <td><%= book.body %></td>
+            </tr>
+          <% end %>
+        </tbody>
+        
+        
+        
+      </table>
+      
+    </div>
+  </div>
+</div>
