[Fin]アクセス制限

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <%= render "layouts/header" %>
+    <p id="notice"><%= flash[:notice] %></p>
     <%= yield %>
     <%= render "layouts/footer" %>
   </body>
