--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,21 @@
 <h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<%= render "books/error", obj: @user %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-sm-12 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>User info</h2>
+      <%= form_with model: @user do |f| %>
+        <%= f.label :Name %></br>
+        <%= f.text_field :name %></br>
+        
+        <%= f.label :Image %></br>
+        <%= f.file_field :profile_image %></br>
+        
+        <%= f.label :Introduction %></br>
+        <%= f.text_area :introduction %></br>
+        
+        <%= f.submit "Update User", class: "btn btn-secondary" %>
+      <% end %>
+    </div>
+  </div>
+</div>
