--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,20 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editiing Book</h1>
+      
+      <%= form_with model: @book do |f| %>
+        <%= f.label :Title %></br>
+        <%= f.text_field :title %></br>
+        
+        <%= f.label :Opinion %></br>
+        <%= f.text_area :body %></br>
+        
+        <%= f.submit "Update Book", class: "btn btn-success btn-sm" %>
+      <% end %>
+      
+      <%= link_to "Show", book_path(@book) %> | 
+      <%= link_to "Back", books_path %>
+    </div>
+  </div>
+</div>
