--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,6 +22,10 @@
               <%= link_to @book.title, book_path(@book) %>
             </td>
             <td><%= @book.body %></td>
+            <% if @book.user == current_user %>
+              <td><%= link_to "Edit", edit_book_path(@book), class: "btn btn-success" %></td>
+              <td><%= link_to "Destroy", book_path(@book), method: :delete, class: "btn btn-danger", "data-confirm"=>"Are you sure?" %></td>
+            <% end %>
           </tr>
         </tbody>
       </table>
