[Fin]Bookers2/復習 Rspec前まで

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 Books#index
-<%= render "books/error", obj: @book %>
+<%= render "layouts/error", obj: @book %>
 <div class="container">
   <div class="row">
     <div class="col-md-3">
