--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Users#edit</h1>
-<%= render "books/error", obj: @user %>
+<%= render "layouts/error", obj: @user %>
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-sm-12 col-lg-5 px-5 px-sm-0 mx-auto">
