--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Books#show</h1>
-
+<%= render "layouts/error", obj: @new_book %>
 <div class="container">
   <div class="row">
     <div class="col-md-3">
