--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Users#show</h1>
-<%= render "books/error", obj: @book %>
+<%= render "layouts/error", obj: @book %>
 <div class="container">
   <div class="row">
     <div class="col-md-3">
