Rspecの対応諸々/~[STEP4]いいねボタンのテスト

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <%= render "layouts/error", obj: @book %>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <h1>Editiing Book</h1>
+      <h1>Editing Book</h1>
       
       <%= form_with model: @book do |f| %>
         <%= f.label :Title %></br>
