--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <%= render "users/info", user: current_user %>
+      <%= render "users/info", user: @user %>
       <%= render "books/form", book: @new_book %>
     </div>
     
